Fixed saved recipes container showing on tablet and mobile screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,6 @@ body {
 }
 
 @media only screen and (max-width: 1200px) {
-  .saved--recipe--section,
   .chef--recommendation--container {
     display: none;
   }
